--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,16 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'application'
+
+mainClassName = "com.boco.gdep.Probe"
 
 sourceCompatibility = 1.5
-version = '1.0'
+
+version = '0.1'
+
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart', 'Implementation-Version': version
+        attributes 'Implementation-Title': 'GDEP', 'Implementation-Version': version
     }
 }
 
@@ -14,13 +19,13 @@ repositories {
 }
 
 dependencies {
-    compile 'commons-configuration:commons-configuration:1.10'
+    compile 'commons-configuration:commons-configuration:1.10', 
+            'org.slf4j:slf4j-api:1.7.7',
+            'ch.qos.logback:logback-classic:1.1.2',
+            'ch.qos.logback:logback-core:1.1.2'
+    
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
-
-// test {
-//    systemProperties 'property': 'value'
-//}
 
 uploadArchives {
     repositories {
