--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,10 @@ dependencies {
     compile 'commons-configuration:commons-configuration:1.10', 
             'org.slf4j:slf4j-api:1.7.7',
             'ch.qos.logback:logback-classic:1.1.2',
-            'ch.qos.logback:logback-core:1.1.2'
-    
+            'ch.qos.logback:logback-core:1.1.2',
+            'com.googlecode.json-simple:json-simple:1.1.1',
+            'commons-io:commons-io:2.4'
+            
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
