--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
             'ch.qos.logback:logback-classic:1.1.2',
             'ch.qos.logback:logback-core:1.1.2',
             'com.googlecode.json-simple:json-simple:1.1.1',
-            'commons-io:commons-io:2.4'
+            'commons-io:commons-io:2.4',
+            'com.google.code.gson:gson:2.2.4'
             
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
