modify cpu display and floating calc algorithm
Signed-off-by: leetschau <leetschau@gmail.com>

--- a/src/test/resources/dep.conf
+++ b/src/test/resources/dep.conf
@@ -4,12 +4,12 @@ cpu
 memory
 disk
 jdk
-fd
+file-descriptor
 [performance]
-net_io
-pkg_loss
-disk_io
 cpu_calc
+disk_io
+pkg_loss
+net_io
 [client]
 user: boco
 ip: 10.12.2.60
